Finalisasi Modeling + Slide

--- a/notebooks/B_modeling.ipynb
+++ b/notebooks/B_modeling.ipynb
@@ -3635,6 +3635,120 @@
     "- Semakin tua Age seseorang, makin mengurangi kemungkinan mereka untuk Default\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bf4b2902",
+   "metadata": {},
+   "source": [
+    "# Decision on IDR 5 Juta"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "id": "e4407603",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   age  monthly_income  loan_amount  previous_defaults  credit_score\n",
+      "0   35        10000000      5000000                  0           700\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Example new applicant\n",
+    "new_data = pd.DataFrame({\n",
+    "    'age': [35],\n",
+    "    'monthly_income': [10_000_000],\n",
+    "    'loan_amount': [5_000_000],\n",
+    "    'previous_defaults': [0],\n",
+    "    'credit_score': [700]\n",
+    "})\n",
+    "\n",
+    "print(new_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "id": "7410142b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scaler.fit(X_train)  \n",
+    "# Use to New Input\n",
+    "new_data_scaled = scaler.transform(new_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "id": "b06cc27d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Probability of Default: 0.1245\n",
+      "Predicted Label (1=default, 0=no default): 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Predict probability of default (class 1)\n",
+    "prob_default = logreg_smote.predict_proba(new_data_scaled)[:, 1][0]\n",
+    "\n",
+    "# Or predict label directly\n",
+    "pred_label = logreg_smote.predict(new_data_scaled)[0]\n",
+    "\n",
+    "print(f\"Probability of Default: {prob_default:.4f}\")\n",
+    "print(f\"Predicted Label (1=default, 0=no default): {pred_label}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "id": "92a1b87b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Scorecard: 782\n"
+     ]
+    }
+   ],
+   "source": [
+    "score = scorecard(prob_default)\n",
+    "print(f\"Scorecard: {score:.0f}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "id": "ee2bb1cf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "822.5"
+      ]
+     },
+     "execution_count": 115,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scorecard(0.05) \n"
+   ]
   }
  ],
  "metadata": {
