Extract CSV, Mulai R

--- a/notebooks/B_modeling.ipynb
+++ b/notebooks/B_modeling.ipynb
@@ -3749,6 +3749,78 @@
    "source": [
     "scorecard(0.05) \n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "efd31589",
+   "metadata": {},
+   "source": [
+    "# Simpan Data untuk R"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "id": "b969b203",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        id  actual  predicted_prob\n",
+      "1782  1782       0        0.872312\n",
+      "3917  3917       0        0.142157\n",
+      "221    221       0        0.664046\n",
+      "2135  2135       0        0.717963\n",
+      "5224  5224       0        0.072367\n"
+     ]
+    }
+   ],
+   "source": [
+    "# === 1) Prediksi di VALIDATION data ===\n",
+    "# (pastikan X_test_scaled sama preprocessing-nya dengan X_train_scaled)\n",
+    "y_test_prob_smote = logreg_smote.predict_proba(X_test_scaled)[:, 1]\n",
+    "y_test_pred_smote = logreg_smote.predict(X_test_scaled)\n",
+    "\n",
+    "# === 2) Buat DataFrame untuk export ke R ===\n",
+    "import pandas as pd\n",
+    "\n",
+    "val_results_smote = pd.DataFrame({\n",
+    "    'id': X_test.index,             # optional: atau range(len(X_test_scaled))\n",
+    "    'actual': y_test,\n",
+    "    'predicted_prob': y_test_prob_smote\n",
+    "})\n",
+    "\n",
+    "# === 3) Simpan ke CSV ===\n",
+    "val_results_smote.to_csv('validation_results_smote.csv', index=False)\n",
+    "\n",
+    "print(val_results_smote.head())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 196,
+   "id": "e066149b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "actual\n",
+       "0    1184\n",
+       "1      16\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 196,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "val_results_smote[\"actual\"].value_counts()"
+   ]
   }
  ],
  "metadata": {
